# ESP

./: CMakeLists.txt  README.md
include/: android_touch.hpp  draw.hpp  global_value  init_egl.hpp  libnwindow.so.h
include/ImGUI/: imgui_impl_android.h
include/frameworks/native/libs/gui/: LayerState.cpp
lib/: libnwindow.so.1  libnwindow.so.3  libnwindow.so.5  libnwindow.so.6  libnwindow.so.7  nwindow.cpp
src/: android_touch.cpp  draw.cpp  init_egl.cpp
src/ImGUI/: imgui_impl_android.cpp
